# docs/swagger.yaml
@@ -1,12 +1,5 @@
 basePath: /api/v1
 definitions:
-  cluster.ClusterEntry:
-    properties:
-      definition:
-        $ref: '#/definitions/types.ClusterDefinition'
-      name:
-        type: string
-    type: object
   types.AWSDomainValidateResponse:
     properties:
       validated:
@@ -22,6 +15,86 @@ definitions:
   types.CivoDomainValidationResponse:
     properties:
       validated:
+        type: boolean
+    type: object
+  types.Cluster:
+    properties:
+      argoCDAuthToken:
+        type: string
+      argoCDCreateRegistryCheck:
+        type: boolean
+      argoCDInitializeCheck:
+        type: boolean
+      argoCDInstallCheck:
+        type: boolean
+      argoCDPassword:
+        type: string
+      argoCDUsername:
+        type: string
+      atlantisWebhookSecret:
+        type: string
+      cloudProvider:
+        type: string
+      cloudRegion:
+        type: string
+      cloudTerraformApplyCheck:
+        type: boolean
+      cloudTerraformApplyFailedCheck:
+        type: boolean
+      clusterID:
+        type: string
+      clusterName:
+        type: string
+      clusterSecretsCreatedCheck:
+        type: boolean
+      clusterType:
+        type: string
+      domainName:
+        type: string
+      gitCredentialsCheck:
+        type: boolean
+      gitHost:
+        type: string
+      gitInitCheck:
+        description: Checks
+        type: boolean
+      gitOwner:
+        type: string
+      gitProvider:
+        type: string
+      gitTerraformApplyCheck:
+        type: boolean
+      gitToken:
+        type: string
+      gitUser:
+        type: string
+      gitlabOwnerGroupID:
+        type: integer
+      gitopsPushedCheck:
+        type: boolean
+      gitopsReadyCheck:
+        type: boolean
+      id:
+        type: string
+      installToolsCheck:
+        type: boolean
+      kbotSetupCheck:
+        type: boolean
+      kubefirstTeam:
+        type: string
+      postDetokenizeCheck:
+        type: boolean
+      privateKey:
+        type: string
+      publicKey:
+        type: string
+      publicKeys:
+        type: string
+      usersTerraformApplyCheck:
+        type: boolean
+      vaultInitializedCheck:
+        type: boolean
+      vaultTerraformApplyCheck:
         type: boolean
     type: object
   types.ClusterDefinition:
@@ -51,8 +124,6 @@ definitions:
         type: string
       git_token:
         type: string
-      hosted_zone:
-        type: string
       type:
         enum:
         - mgmt
@@ -67,7 +138,6 @@ definitions:
     - git_owner
     - git_provider
     - git_token
-    - hosted_zone
     - type
     type: object
   types.JSONFailureResponse:
@@ -182,7 +252,7 @@ paths:
           description: OK
           schema:
             items:
-              $ref: '#/definitions/cluster.ClusterEntry'
+              $ref: '#/definitions/types.Cluster'
             type: array
         "400":
           description: Bad Request
@@ -232,7 +302,7 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/cluster.ClusterEntry'
+            $ref: '#/definitions/types.Cluster'
         "400":
           description: Bad Request
           schema:
